fix: loading indicator not visible on bright surfaces

--- a/src/components/base/Loading.module.scss
+++ b/src/components/base/Loading.module.scss
@@ -1,10 +1,9 @@
 @import "css/styles";
 
+$spinner-color: rgba(0, 0, 0, 0.4);
+
 .container {
-  width: 100%;
-  height: 100%;
   display: flex;
-  flex: 5 1;
   align-items: center;
   justify-content: center;
 }
@@ -40,7 +39,7 @@
 }
 
 .loadingBig {
-  box-shadow: 0 4px 0 0 $border-color;
+  box-shadow: 0 4px 0 0 $spinner-color;
   width: calc(100% - 4px - 4px);
   height: calc(100% - 4px - 4px);
   top: 4px;
@@ -49,7 +48,7 @@
 }
 
 .loadingMid {
-  box-shadow: 0 3px 0 0 $border-color;
+  box-shadow: 0 3px 0 0 $spinner-color;
   width: calc(100% - 3px - 3px);
   height: calc(100% - 3px - 3px);
   top: 3px;
@@ -58,7 +57,7 @@
 }
 
 .loadingSmall {
-  box-shadow: 0 2px 0 0 $border-color;
+  box-shadow: 0 2px 0 0 $spinner-color;
   width: calc(100% - 2px - 2px);
   height: calc(100% - 2px - 2px);
   top: 2px;
